# main.js
@@ -26,15 +26,15 @@ app.use(
 app.use(express.urlencoded({ extended: false })); // parse application/x-www-form-urlencoded
 app.use(express.static(path.join(__dirname, "public"))); //To serve static files such as images, CSS files, and JavaScript files
 //local:
-// app.use(express.static(path.join(__dirname, "dist")));
+app.use(express.static(path.join(__dirname, "dist")));
 //remote:
-app.use(express.static(path.join(__dirname, '../assignment-3-3-basic/dist')));
+// app.use(express.static(path.join(__dirname, '../assignment2-1-318475415_208587253/dist')));
 app.get("/",function(req,res)
 { 
   //remote: 
-  res.sendFile(path.join(__dirname, '../assignment-3-3-basic/dist/index.html'));
+  // res.sendFile(path.join(__dirname, '../assignment2-1-318475415_208587253/dist/index.html'));
   //local:
-  // res.sendFile(__dirname+"/index.html");
+  res.sendFile(__dirname+"/index.html");
 
 });
 
@@ -49,7 +49,8 @@ const corsConfig = {
 app.use(cors(corsConfig));
 app.options("*", cors(corsConfig));
 
-var port = process.env.PORT || "80"; //local=3000 remote=80
+// var port = process.env.PORT || "3000"; //local=3000 remote=80
+var port = "3000";
 //#endregion
 const user = require("./routes/user");
 const recipes = require("./routes/recipes");
@@ -59,9 +60,9 @@ const auth = require("./routes/auth");
 //#region cookie middleware
 app.use(function (req, res, next) {
   if (req.session && req.session.user_id) {
-    DButils.execQuery("SELECT user_id FROM users")
+    DButils.execQuery("SELECT username FROM users")
       .then((users) => {
-        if (users.find((x) => x.user_id === req.session.user_id)) {
+        if (users.find((x) => x.username === req.session.user_id)) {
           req.user_id = req.session.user_id;
         }
         next();
@@ -79,7 +80,7 @@ app.get("/alive", (req, res) => res.send("I'm alive"));
 // Routings
 app.use("/users", user);
 app.use("/recipes", recipes);
-app.use(auth);
+app.use("/auth",auth);
 
 // Default router
 app.use(function (err, req, res, next) {
@@ -89,15 +90,15 @@ app.use(function (err, req, res, next) {
 
 
 
-// const server = app.listen(port, () => {
-//   console.log(`Server listen on port ${port}`);
-// });
+const server = app.listen(port, () => {
+  console.log(`Server listen on port ${port}`);
+});
 
-// process.on("SIGINT", function () {
-//   if (server) {
-//     server.close(() => console.log("server closed"));
-//   }
-//   process.exit();
-// });
+process.on("SIGINT", function () {
+  if (server) {
+    server.close(() => console.log("server closed"));
+  }
+  process.exit();
+});
 
-module.exports = app;
+// module.exports = app;
