# routes/auth.js
@@ -11,12 +11,11 @@ router.post("/Register", async (req, res, next) => {
     // username exists
     let user_details = {
       username: req.body.username,
-      firstname: req.body.firstname,
-      lastname: req.body.lastname,
+      firstName: req.body.firstName,
+      lastName: req.body.lastName,
       country: req.body.country,
-      password: req.body.password,
       email: req.body.email,
-      profilePic: req.body.profilePic
+      password: req.body.password,
     }
     let users = [];
     users = await DButils.execQuery("SELECT username from users");
@@ -30,8 +29,8 @@ router.post("/Register", async (req, res, next) => {
       parseInt(process.env.bcrypt_saltRounds)
     );
     await DButils.execQuery(
-      `INSERT INTO users VALUES ('${user_details.username}', '${user_details.firstname}', '${user_details.lastname}',
-      '${user_details.country}', '${hash_password}', '${user_details.email}')`
+      `INSERT INTO users VALUES ('${user_details.username}', '${user_details.firstName}', '${user_details.lastName}',
+      '${user_details.country}', '${user_details.email}', '${hash_password}')`
     );
     res.status(201).send({ message: "user created", success: true });
   } catch (error) {
@@ -58,7 +57,7 @@ router.post("/Login", async (req, res, next) => {
     }
 
     // Set cookie
-    req.session.user_id = user.user_id;
+    req.session.user_id = user.username;
 
 
     // return cookie
