# routes/recipes.js
@@ -21,6 +21,15 @@ router.get("/search", async (req, res, next) => {
   }
 })
 
+router.get("/random", async (req, res, next) => {
+  try {
+    const results = await recipes_utils.getRandomRecipes();
+    res.send(results);
+  } catch (error) {
+    next(error);
+  }
+})
+
 /**
  * This path returns a full details of a recipe by its id
  */
@@ -33,4 +42,12 @@ router.get("/:recipeId", async (req, res, next) => {
   }
 });
 
+router.get("/fullInforamtion/:recipeId", async (req, res, next) => {
+  try {
+    const recipe = await recipes_utils.getFullRecipeDetails(req.params.recipeId);
+    res.send(recipe);
+  } catch (error) {
+    next(error);
+  }
+});
 module.exports = router;
